# SlideSherlock

./: .dockerignore  .env.example  .flake8  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  check_minio.sh  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_api_connectors.sh  test_render.sh
.github/workflows/: ci.yml  docs-deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_job_status_and_artifact_fields.py  003_evidence_index_tables.py  004_add_requested_language.py  005_add_job_config_json.py
apps/api/: database.py  main.py  models.py  package.json  requirements.txt  schemas.py  worker.py
apps/web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
apps/worker/: package.json  requirements.txt  worker.py
batch_results_ai/: batch_summary.csv  batch_summary.json  batch_summary_18.json
batch_results_ai/aib.sd.gov_pdf_BSEupdate%20-%20Detweiler/: metrics.json  run_log.json
batch_results_ai/arset.gsfc.nasa.gov_materials_files_Air_Quality_Products_Overview/: metrics.json  run_log.json
batch_results_ai/astrophysics.gsfc.nasa.gov_conferences_supernova1987a_Staveley-Smith/: metrics.json  run_log.json
batch_results_ai/avdc.gsfc.nasa.gov_PDF2_5_Balis_OMI_TO3C_Ground/: metrics.json  run_log.json
batch_results_ai/beamdocs.fnal.gov_AD_DocDB_0002_000284_003_Fast_Recycler_Stacking_v2/: metrics.json  run_log.json
batch_results_ai/beamdocs.fnal.gov_AD_DocDB_0022_002206_001_Shiltsev_Thoughts/: metrics.json  run_log.json
batch_results_ai/cce.nasa.gov_cce_biodiversity_2009agenda_May%207%20Biodiv-EcoFore%20Team%20Mtg_Hansenpalms%20NASA%202009.2/: metrics.json  run_log.json
batch_results_ai/cce.nasa.gov_mtg2008_ab_presentations_JSW08_Poster_Moore_206_57/: metrics.json  run_log.json
batch_results_ai/cceo.gsfc.nasa.gov_meeting_2008_biodiversity_pres_may01_08_geller/: metrics.json  run_log.json
batch_results_ai/cdc.gov_tb_programs_Evaluation_Guide_Webinar_Using_survillance_data_in_evaluation/: metrics.json  run_log.json
batch_results_draft/: batch_summary.csv  batch_summary.json  batch_summary_18.json
batch_results_pro/: batch_summary.csv  batch_summary.json  batch_summary_18.json
docs/: architecture_diagram.html  docusaurus.config.js  no_hallucination_diagram.html  package-lock.json  package.json  sidebars.js
scripts/: analyze_hallucination.py  batch_run.py  cleanup_old_jobs.sh  create_sample_connectors_ppt.py  evidence_index_migrate.sh  hallucination_experiment.py  run_demo.py  slidesherlock_cli.py  test_api.sh  verify_evidence_id_stable.py
(+978 files in other folders)
